remove tests that rely on pni-less AuthCredential issuance